Merge new-version, resolve conflicts